# anyfold

./: .dir-locals.el  .gitignore  CMakeLists.txt  CTestLists.txt  FindOpenCL.cmake  LICENSE  README.md  anyfold-config-version.cmake.in  anyfold-config.cmake.in  cuda_convolve-config-version.cmake.in  cuda_convolve-config.cmake.in
benchmarks/: Makefile  benchmarks.cpp  measureTime.hpp
include/: CMakeLists.txt  anyfold-config.cmake  anyfold.cuh  anyfold.hpp  convolution.cuh  cpu_convolve.hpp  cuda_convolve.cuh  image_stack_utils.h
include/cpu/: convolve.hpp
include/opencl/: convolution3DCL.hpp  convolution3DCLBuffer.hpp  convolution3DCLBufferLocalMem.hpp  convolution3DCLImage.hpp  convolution3DCLImageLocalMem.hpp  convolve.hpp
src/: CMakeLists.txt
src/opencl/: convolution3DCL.cpp  convolution3DCLBuffer.cpp  convolution3DCLBufferLocalMem.cpp  convolution3DCLImage.cpp  convolution3DCLImageLocalMem.cpp  convolution3d.cl  convolution3dBuffer.cl  convolution3dBufferLocalMem.cl  convolution3dImage.cl  convolution3dImageLocalMem.cl
tests/: CMakeLists.txt  convert_tiff_fixtures.hpp  image_stack_utils.h  padd_utils.h  test_algorithms.hpp  test_cpu_convolve.cpp  test_cuda_convolve.cu  test_fixtures.hpp  test_fixtures_asym.hpp  test_opencl_convolve.cpp
