# include directories
# src directory
INCLUDE_DIRECTORIES(.)

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER "${PROJECT_SOURCE_DIR}/inc/cuda_convolve.cuh") 
INSTALL(TARGETS ${PROJECT_NAME}
  EXPORT cuda_convolve-targets 
  PUBLIC_HEADER DESTINATION "${INSTALL_INCLUDE_DIR}" COMPONENT inc)




